# fuelpricetracker

./: .env.sample  .gitignore  Dockerfile  LICENCE  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  prices.py  push.py  stations.py  votes.py
backend/app/scripts/: seed_stations.py
frontend/: index.html  manifest.json  styles.css  sw.js
